--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -3,11 +3,33 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
 
-<main>
-	{{>heading title="Index" info=data.test}}
-</main>
+<div class="page">
+    <h1 class="title">
+        To-do list
+    </h1>
+
+    <div class="form">
+        <input type="text" class="form_input" placeholder="Введіть задачу...">
+        <button class="form_button">Додати</button>
+    </div>
+
+    <main class="task_list">
+
+    </main>
+</div>
+
+<template id="task">
+    <div class="task task">
+        <span class="task_number">1.</span>
+        <span class="task_text">Some placeholder content in a paragraph below the heading and date.</span>
+        <button class="task_button task_button_do"></button>
+        <button class="task_button task_button_cancel"></button>
+    </div>
+</template>
 
 {{!
-    Цей код містить лише те, що буде виводитись в <body>
+Цей код містить лише те, що буде виводитись в
+
+<body>
     Адже наш layout/default.hbs має вже структуру HTML
-}}
+    }}
